cabal-version: 3.0
name: hlox
version: 0.1.0.0
-- synopsis:
-- description:
license: BSD-3-Clause
license-file: LICENSE
author: Dylan Sommer
maintainer: dylansommer96@gmail.com
-- copyright:
build-type: Simple
extra-doc-files: CHANGELOG.md

-- extra-source-files:
common warnings
  ghc-options: -Wall
  default-language: GHC2021

executable hlox
  import: warnings
  main-is: Main.hs
  other-modules:
    Ast
    Lexical
    Parser

  -- other-extensions:
  build-depends:
    base,
    containers,
    megaparsec,
    mtl,
    -- text >=2.1.2,

  hs-source-dirs: app

test-suite hlox-test
  import: warnings
  default-language: Haskell2010
  -- other-modules:
  -- other-extensions:
  type: exitcode-stdio-1.0
  hs-source-dirs: test
  main-is: Main.hs
  build-depends: base ^>=4.18.3.0
